@@ -2319,6 +2319,9 @@ eng_gl_context_destroy(void *data, void *context)
         return 0;
      }
 
+   if (current_evgl_ctx == ctx)
+      current_evgl_ctx = NULL;
+
    free(ctx);
    context = NULL;
 
